# ai-engineering-demos

./: README.md
week-1/: README.md  requirements.txt  sentiment_analysis.py
week-3/content-safety/: image_moderation_api.py  pyproject.toml
week-4/content-safety/: README.md  content_moderation.py  image_moderation.py
week-5/: README.md  pyproject.toml  sample_code.md
week-5/translator/: app.py
week-5/web-translator/: PROMPT.md  README.md  app.py  run.sh
week-5/web-translator/static/fonts/: README.md
week-5/web-translator/templates/: index.html
week-6/azure-clu-example/: main.py  pyproject.toml
week-6/azure-qa-example/: README.md  main.py  pyproject.toml
