[project]
name = "week-5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "azure-cognitiveservices-speech>=1.48.2",
    "fastapi>=0.115.0",
    "gradio>=4.0",
    "jinja2>=3.1.0",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "transformers>=5.3.0",
    "uvicorn>=0.30.0",
]
